--- a/TechJobsPersistent/Views/Home/AddJob.cshtml
+++ b/TechJobsPersistent/Views/Home/AddJob.cshtml
@@ -1,10 +1,27 @@
-﻿<h1>Add a Job</h1>
+﻿@model TechJobsPersistent.ViewModels.AddJobViewModel
+
+<h1>Add a Job</h1>
 
 <form asp-controller="Home" asp-action="ProcessAddJobForm" method="post">
     <div class="form-group">
-        <label>Name</label>
-        <input class="form-control" />
-        <span></span>
+        <label asp-for="Name">Name</label>
+        <input asp-for="Name "class="form-control" />
+        <span style="color:red" asp-validation-for="Name"></span>
+    </div>
+    <div class="form-group">
+        <label asp-for="EmployerId">Employer</label>
+        <select asp-for="EmployerId" asp-items="Model.Employers"></select><br />
+        <a asp-controller="Employer" asp-action="Add">Add Employer</a>
+    </div>
+    <div class="form-group">
+        @foreach (var skill in Model.Skills)
+        {
+            <label for="@skill.Id">@skill.Name</label>
+            <input type="checkbox" name="selectedSkills" value="@skill.Id" />
+        }
+        <br />
+        <a asp-controller="Skill" asp-action="Add">Add Skill</a>
+
     </div>
 
     <input type="submit" value="Add Job" />
